--- a/app/views/application_change_mailer/new_application_email.html.erb
+++ b/app/views/application_change_mailer/new_application_email.html.erb
@@ -7,19 +7,16 @@
 
   <body>
     <hr style="border: 0; border-top: solid 2px #EB0029;" />
-    <h1 style="text-align: center">Your TOCA Cares Scholarship Application Has Been Accepted</h1>
+    <h1 style="text-align: center">A New Application was Just Submitted on TOCA Cares</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear <%= @application.full_name %>,
+      Dear Committee Member,
     </p>
     <p>
-      We are delighted to inform you that your scholarship application to TOCA Cares has been approved!
+      A new <%= @application.application_type %> application has been submitted and is awaiting your vote.  Sign in <%= link_to "here", new_user_session_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> and you can <%= link_to "manage applications", home_pending_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> that need your consideration.
     </p>
     <p>
-      You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information pertaining to the tuition and organization. Once verified, Helping Hands will pay the agreed amount of your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA Cares is glad we can help valued employees like you.
-    </p>
-    <p>
-      Sincerely,
+      From,
       <br>TOCA Cares
     </p>
     <p>
