--- a/app/views/hardship_mailer/hardship_accepted_email.html.erb
+++ b/app/views/hardship_mailer/hardship_accepted_email.html.erb
@@ -10,7 +10,7 @@
     <h1 style="text-align: center">Your TOCA Cares Hardship Application Has Been Accepted</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Employee,
+      Dear <%= @application.full_name %>,
     </p>
     <p>
       We are delighted to inform you that your hardship application to TOCA Cares has been approved!
