--- a/app/views/hardship_mailer/hardship_denied_email.html.erb
+++ b/app/views/hardship_mailer/hardship_denied_email.html.erb
@@ -10,7 +10,7 @@
     <h1 style="text-align: center">Your TOCA Cares Hardship Application Has Been Denied</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Valued Employee,
+      Dear <%= @application.full_name %>,
     </p>
     <p>
       After careful consideration, we regret to inform you that we are not able to financially assist you in your requested situation.
