--- a/app/views/charity_mailer/charity_denied_email.html.erb
+++ b/app/views/charity_mailer/charity_denied_email.html.erb
@@ -10,7 +10,7 @@
     <h1 style="text-align: center">Your TOCA Cares Charity Application Has Been Denied</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Valued Employee,
+      Dear <%= @application.full_name %>,
     </p>
     <p>
       After careful consideration, we regret to inform you that we are not able to sponsor the charity you requested.
@@ -19,7 +19,7 @@
       The Decision Committee thoroughly reviewed your application and has determined, based on the TOCA Cares Corporate Assistance guidelines, that your situation does not meet one or more of the qualifications for aid. Because this is a community fund, the Decision Committee is tasked with the difficult responsibility of making sure the fund is only used in authorized situations. Additionally, since contributors to the fund receive tax benefits, the Decision Committee must follow specific legal regulations, which can hinder what qualifies and what does not. There are a number of reasons your situation may not be eligible. Remember that you must be personally involved in the charity to get sponsorship.
     </p>
     <p>
-      For clarity on your decision, feel free to refer to the TOCA Cares website to learn more about what type of charitable involvement TOCA Cares will sponsor. We appreciate your application, and we encourage you to apply again in the future. You are a valued part of the TOCA family. 
+      For clarity on your decision, feel free to refer to the TOCA Cares website to learn more about what type of charitable involvement TOCA Cares will sponsor. We appreciate your application, and we encourage you to apply again in the future. You are a valued part of the TOCA family.
     </p>
     <p>
       Sincerely,
