--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,38 +46,38 @@
 
     <!-- IF ADMIN -->
     <% if @user.admin %>
+      <section class="my-5">
+        <h2 class="text-center toca-uppercase color-toca-red">Admin Actions</h2>
 
-      <h2 class="text-center toca-uppercase color-toca-red my-5">Admin Actions</h2>
+        <%= link_to questions_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
+          <% if @questions.count != 0 %>
+            <div class="bg-toca-red notification-bubble"><%= @questions.count %></div>
+          <% end %>
+          Answer Questions
+        <% end %>
+        <%= link_to users_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
+          <% if @committee_requests.count != 0 %>
+            <div class="bg-toca-red notification-bubble"><%= @committee_requests.count %></div>
+          <% end %>
+          Manage Users
+        <% end %>
+        <%= link_to home_testimonials_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
+          <% if @testimonials.count != 0 %>
+            <div class="bg-toca-red notification-bubble"><%= @testimonials.count %></div>
+          <% end %>
+          Manage Testimonials
+        <% end %>
+        <%= link_to home_applications_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
+          <% if @open_applications.count != 0 %>
+            <div class="bg-toca-red notification-bubble"><%= @open_applications.count %></div>
+          <% end %>
+          Manage Applications
+        <% end %>
+        <%= link_to logs_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
+        View Website Activity Log
+        <% end %>
 
-      <%= link_to questions_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-        <% if @questions.count != 0 %>
-          <div class="bg-toca-red notification-bubble"><%= @questions.count %></div>
-        <% end %>
-        Answer Questions
-      <% end %>
-      <%= link_to users_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-        <% if @committee_requests.count != 0 %>
-          <div class="bg-toca-red notification-bubble"><%= @committee_requests.count %></div>
-        <% end %>
-        Manage Users
-      <% end %>
-      <%= link_to home_testimonials_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-        <% if @testimonials.count != 0 %>
-          <div class="bg-toca-red notification-bubble"><%= @testimonials.count %></div>
-        <% end %>
-        Manage Testimonials
-      <% end %>
-      <%= link_to home_applications_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-        <% if @open_applications.count != 0 %>
-          <div class="bg-toca-red notification-bubble"><%= @open_applications.count %></div>
-        <% end %>
-        Manage Applications
-      <% end %>
-      <%= link_to logs_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-      View Website Activity Log
-      <% end %>
-
-
+      </section> <!-- admin only -->
     <% end %>
     <!-- END ADMIN ONLY -->
 
