--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -171,7 +171,7 @@
           </div> <!-- row -->
 
           <div class="field">
-            <%= form.text_field :subject, class: "form-control mb-4", placeholder: "Your Email", required: true %>
+            <%= form.text_field :subject, class: "form-control mb-4", placeholder: "Subject", required: true %>
           </div>
 
           <div class="field">
