--- a/app/views/testimonials/index.html.erb
+++ b/app/views/testimonials/index.html.erb
@@ -37,6 +37,7 @@
               </div> <!-- avatar -->
             </div> <!-- column -->
             <div class="col-sm-8 col-lg-12 text-left">
+
               <% @featured_hardship.each do |testimonial| %>
                 <h6 class="font-weight-bold color-black toca-uppercase mt-3"><%= testimonial.category %>:  <%= testimonial.title %></h6>
                 <p class="dark-grey-text">
@@ -45,8 +46,39 @@
                   <i class="fas fa-quote-right pl-2 color-toca-red"></i>
                 </p>
               <% end %>
-            </div> <!-- column -->
-          </div> <!-- row -->
+
+              <hr>
+
+              <% @other_hardships.each do |testimonial| %>
+                <div class="single-news mb-3"> <!-- Small news -->
+                  <div class="d-flex justify-content-between">
+                    <div class="col-11 text-truncate pl-0 mb-1">
+                      <strong><a class="color-toca-red"><%= testimonial.title %></a></strong>
+                    </div> <!-- title -->
+                    <a id="<%= testimonial.id %>-arrow-down" style="display:none"><i class="color-toca-green fas fa-angle-double-down"></i></a>
+                    <a id="<%= testimonial.id %>-arrow-right"><i class="color-toca-green fas fa-angle-double-right"></i></a>
+                  </div> <!-- d-flex -->
+                  <div id="<%= testimonial.id %>-body" style="display:none"><p class="color-light-dark" style="line-height: 1.3; font-size: 14px"><em><%= testimonial.body %></em></p></div>
+                </div>   <!-- Small news -->
+
+                <script>
+                  $(document).ready(function() {
+                    $('#<%= testimonial.id %>-arrow-right').click(function() {
+                      $('#<%= testimonial.id %>-arrow-right').toggle();
+                      $('#<%= testimonial.id %>-arrow-down').toggle();
+                      $('#<%= testimonial.id %>-body').toggle();
+                    });
+                    $('#<%= testimonial.id %>-arrow-down').click(function() {
+                      $('#<%= testimonial.id %>-arrow-right').toggle();
+                      $('#<%= testimonial.id %>-arrow-down').toggle();
+                      $('#<%= testimonial.id %>-body').toggle();
+                    });
+                  });
+                </script>
+              <% end %>
+
+            </div> <!-- hardship  column -->
+          </div> <!-- hardship other row -->
         </div> <!-- testimonial -->
 
       </div> <!-- end hardship -->
@@ -81,6 +113,37 @@
                     </p>
                   <% end %>
                 <% end %>
+
+                <hr>
+
+                <% @other_scholarships.each do |testimonial| %>
+                  <div class="single-news mb-3"> <!-- Small news -->
+                    <div class="d-flex justify-content-between">
+                      <div class="col-11 text-truncate pl-0 mb-1">
+                        <strong><a class="color-toca-red"><%= testimonial.title %></a></strong>
+                      </div> <!-- title -->
+                      <a id="<%= testimonial.id %>-arrow-down" style="display:none"><i class="color-toca-green fas fa-angle-double-down"></i></a>
+                      <a id="<%= testimonial.id %>-arrow-right"><i class="color-toca-green fas fa-angle-double-right"></i></a>
+                    </div> <!-- d-flex -->
+                    <div id="<%= testimonial.id %>-body" style="display:none"><p class="color-light-dark" style="line-height: 1.3; font-size: 14px"><em><%= testimonial.body %></em></p></div>
+                  </div>   <!-- Small news -->
+
+                  <script>
+                    $(document).ready(function() {
+                      $('#<%= testimonial.id %>-arrow-right').click(function() {
+                        $('#<%= testimonial.id %>-arrow-right').toggle();
+                        $('#<%= testimonial.id %>-arrow-down').toggle();
+                        $('#<%= testimonial.id %>-body').toggle();
+                      });
+                      $('#<%= testimonial.id %>-arrow-down').click(function() {
+                        $('#<%= testimonial.id %>-arrow-right').toggle();
+                        $('#<%= testimonial.id %>-arrow-down').toggle();
+                        $('#<%= testimonial.id %>-body').toggle();
+                      });
+                    });
+                  </script>
+                <% end %>
+
               </div> <!-- col -->
             </div> <!-- row -->
           </div> <!-- testimonial -->
@@ -108,6 +171,37 @@
                     <i class="fas fa-quote-right pl-2 color-toca-red"></i>
                   </p>
                 <% end %>
+
+                <hr>
+
+                <% @other_charities.each do |testimonial| %>
+                  <div class="single-news mb-3"> <!-- Small news -->
+                    <div class="d-flex justify-content-between">
+                      <div class="col-11 text-truncate pl-0 mb-1">
+                        <strong><a class="color-toca-red"><%= testimonial.title %></a></strong>
+                      </div> <!-- title -->
+                      <a id="<%= testimonial.id %>-arrow-down" style="display:none"><i class="color-toca-green fas fa-angle-double-down"></i></a>
+                      <a id="<%= testimonial.id %>-arrow-right"><i class="color-toca-green fas fa-angle-double-right"></i></a>
+                    </div> <!-- d-flex -->
+                    <div id="<%= testimonial.id %>-body" style="display:none"><p class="color-light-dark" style="line-height: 1.3; font-size: 14px"><em><%= testimonial.body %></em></p></div>
+                  </div>   <!-- Small news -->
+
+                  <script>
+                    $(document).ready(function() {
+                      $('#<%= testimonial.id %>-arrow-right').click(function() {
+                        $('#<%= testimonial.id %>-arrow-right').toggle();
+                        $('#<%= testimonial.id %>-arrow-down').toggle();
+                        $('#<%= testimonial.id %>-body').toggle();
+                      });
+                      $('#<%= testimonial.id %>-arrow-down').click(function() {
+                        $('#<%= testimonial.id %>-arrow-right').toggle();
+                        $('#<%= testimonial.id %>-arrow-down').toggle();
+                        $('#<%= testimonial.id %>-body').toggle();
+                      });
+                    });
+                  </script>
+                <% end %>
+
               </div> <!-- column -->
             </div> <!-- row -->
           </div> <!-- testimonial -->
