--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -154,7 +154,10 @@
               <tr>
                 <td style="vertical-align: top">
                   <% if vote.user_id == current_user.id %>
-                    <%= button_to "Delete My Vote", vote_path(vote), method: :delete, class: "btn btn-sm mr-3 btn-light", data: { confirm: "Are you sure you want to delete your vote?" } %>
+                    <button type="button" class="btn btn-sm mr-3 btn-light" data-toggle="modal" data-target="#editVoteModal-<%= vote.id %>">
+                      Change My Vote
+                    </button>
+                    <%= render partial: "charities/vote_modal", locals: { vote: vote } %>
                   <% else %>
                     <%= button_to "Second This Vote", second_vote_path(vote), class: "btn btn-sm mr-3 btn-secondary" %>
                   <% end %>
