--- a/app/views/hardships/show.html.erb
+++ b/app/views/hardships/show.html.erb
@@ -183,7 +183,10 @@
               <tr>
                 <td style="vertical-align: top">
                   <% if vote.user_id == current_user.id %>
-                    <%= button_to "Delete My Vote", vote_path(vote), method: :delete, class: "btn btn-sm mr-3 btn-light", data: { confirm: "Are you sure you want to delete your vote?" } %>
+                    <button type="button" class="btn btn-sm mr-3 btn-light" data-toggle="modal" data-target="#editVoteModal-<%= vote.id %>">
+                      Change My Vote
+                    </button>
+                    <%= render partial: "hardships/vote_modal", locals: { vote: vote } %>
                   <% else %>
                     <%= button_to "Second This Vote", second_vote_path(vote), class: "btn btn-sm mr-3 btn-secondary" %>
                   <% end %>
@@ -240,7 +243,7 @@
 
 
 
-<!-- Central Modal Small -->
+<!-- NEW VOTE MODAL -->
 <div class="modal fade" id="newVoteModal" tabindex="-1" role="dialog" aria-labelledby="newModificationModal"
   aria-hidden="true">
 
@@ -357,7 +360,10 @@
     </div>
   </div>
 </div>
-<!-- Central Modal Small -->
+<!-- END NEW VOTE MODAL -->
+
+
+
 
 
 
