--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,24 +1,54 @@
-<h2>Change your password</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
+<main class="my-5">
+  <div class="container">
 
-  <div class="form-inputs">
-    <%= f.input :password,
-                label: "New password",
-                required: true,
-                autofocus: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
-  </div>
+    <h1 class="text-center">Change Your Password?</h1>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+    <div class="row justify-content-md-center">
+      <div class="text-center col-md-8 border border-light px-5 pt-5 pb-2">
+
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= f.error_notification %>
+
+          <%= f.input :reset_password_token, as: :hidden %>
+          <%= f.full_error :reset_password_token %>
+
+            <div class="form-inputs">
+              <div class="row">
+                <div class="col">
+                  <%= f.input :password,
+                              required: true,
+                              autofocus: true,
+                              label: false,
+                              hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                              input_html: {
+                                autocomplete: "new-password",
+                                id: "new-password",
+                                class: "form-control",
+                                placeholder: "New Password"
+                              } %>
+                </div>  <!-- form col -->
+                <div class="col">
+                  <%= f.input :password_confirmation,
+                            label: false,
+                            required: true,
+                            input_html: {
+                              class: "form-control",
+                              placeholder: "Confirm New Password"
+                            } %>
+                </div>  <!-- form col -->
+              </div> <!-- form row -->
+
+              <div class="form-actions">
+                <%= f.button :submit, "Change my password", class: "btn btn-primary my-4 btn-block" %>
+              </div>
+            <% end %>
+
+          </div> <!-- form inputs -->
+        </div> <!-- form border column -->
+      </div> <!-- row -->
+
+  </div> <!-- container -->
+</main>
