--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,42 @@
-<h2>Forgot your password?</h2>
+<main class="my-5">
+  <div class="container">
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+    <h1 class="text-center">Forgot Your Password?</h1>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="row justify-content-md-center">
+      <div class="text-center col-md-8 border border-light px-5 pt-5 pb-2">
 
-<%= render "devise/shared/links" %>
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= f.error_notification %>
+
+          <div class="form-inputs mt-3">
+            <div class="row">
+              <div class="col">
+                <%= f.input :email,
+                            required: true,
+                            autofocus: true,
+                            label: false,
+                            input_html: {
+                              autocomplete: "email",
+                              id: "email",
+                              class: "form-control",
+                              placeholder: "Your Email"
+                            } %>
+              </div> <!-- form column -->
+            </div> <!-- form row -->
+          </div> <!-- form inputs -->
+
+          <div class="form-actions">
+            <%= f.button :submit, "Send me reset password instructions", class: "btn btn-primary my-4 btn-block" %>
+          </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+
+
+        </div> <!-- form border column -->
+      </div> <!-- row -->
+
+  </div> <!-- container -->
+</main>
