Hotfix and Kaminari Unstyled

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -168,7 +168,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q11H">Are there situations that don’t qualify to receive money from the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q11P">
-            Most logical unexpected hardship applications will receive funding. Situations that <em>don’t</em> qualify include funding for vacations, repeated incidents (such as the 3th broken phone), luxury items, new pets, or other forseeable expenses.
+            Most logical unexpected hardship applications will receive funding. Situations that <em>don’t</em> qualify include funding for vacations, repeated incidents (such as the 3rd broken phone), luxury items, new pets, or other forseeable expenses.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
