TOCA Emails Only

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -247,7 +247,10 @@ img { max-width: 100%; }
 -------------------------------
 -----------------------------*/
 
-
+span.error, div.error_notification {
+  color: $color-toca-red;
+  font-weight: 900;
+}
 
 .form-check-input[type="checkbox"]:checked + label:before, label.btn input[type="checkbox"]:checked + label:before {
   border-right: 2px solid $color-toca-red;
