--- a/app/views/hardship_mailer/hardship_denied_email.html.erb
+++ b/app/views/hardship_mailer/hardship_denied_email.html.erb
@@ -21,7 +21,24 @@
     <p>
       Additionally, since contributors to the fund receive tax benefits, the Decision Committee must follow specific legal regulations, which can hinder what qualifies and what does not. There are a number of reasons your situation may not be eligible; some examples may include, overuse of fund previously, not enough time between fund applications, misunderstanding of the fund, lack of demonstrated need, lack of relative hardship compared to other applications, etc.
     </p>
-    <!-- add vote info here -->
+    <% vote = Vote.where(application_type: @application.application_type, application_id: @application.id, seconded: true).first %>
+    <p>
+      Your specific appliation was denied because:
+      <ul>
+        <% if vote.denial_fund_overuse %>
+          <li>You seem to be overusing the fund.</li>
+        <% end %>
+        <% if vote.denial_not_qualify %>
+          <li>The situation described didn't fit our definition of a hardship.</li>
+        <% end %>
+        <% if vote.denial_unreasonable_request %>
+          <li>The request didn't seem reasonable.</li>
+        <% end %>
+        <% if vote.denial_fund_overuse %>
+          <li><% vote.denial_other_description %></li>
+        <% end %>
+      </ul>
+    </p>
     <p>
       For clarity on your decision, feel free to refer to the <%= link_to "info page", page_url(:info), style: "color: #EB0029; font-weight: 700; text-decoration: none" %> on the TOCA Cares website for more information on what qualifies as a hardship.
     </p>
